added Czech Republic

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <!-- BEGIN HOME -->
                     <section id="sec-home">
                         <p>
-                            Welcome to my portfolio web site. I was born and raised in Presov, Slovakia, then spent six years attending Czech Technical University in Prague, now living in Most, Czech Republic with my wife.
+                            Welcome to my portfolio web site. I was born and raised in Presov, Slovakia, then spent six years attending Czech Technical University in Prague, Czech Republic now living in Most, Czech Republic with my wife.
                         </p>
                         <p>
                             I am a freelance worker, currently working on various web application projects managed by <a href="http://www.ebee.cz/" title="Ebee s.r.o." target="_blank">Ebee s.r.o.</a> - a small Prague company.
